more closed station refactor, new data version